fix(2.3.x): complete Java 8 and Boot 2 integration